<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/jj"
    android:orientation="vertical"
    tools:context=".apppart2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/cc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/ps1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/noo"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/br"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/vp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/bp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/c65"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/kb"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/d"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>

